[gd_scene load_steps=4 format=3 uid="uid://vebouu2vv453"]

[ext_resource type="Theme" uid="uid://bgod22o80c88u" path="res://Assets/GameTheme.tres" id="1_173kr"]
[ext_resource type="Script" path="res://Objects/scene_selection.gd" id="1_nmot2"]
[ext_resource type="Texture2D" uid="uid://kuc2kanhcxno" path="res://Assets/Buttons/right_idle.png" id="3_eac2a"]

[node name="Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nmot2")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.230035
anchor_top = -0.00154321
anchor_right = 0.730312
anchor_bottom = 0.995642
offset_right = -0.32
offset_bottom = -0.176003
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_173kr")
item_count = 5
item_0/text = "Tutorial"
item_1/text = "Scene 1"
item_2/text = "Scene 2"
item_3/text = "Scene 3"
item_4/text = "Scene 4"
metadata/_edit_use_anchors_ = true

[node name="Popup" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357
anchor_top = 0.548
anchor_right = 0.601
anchor_bottom = 0.775
offset_left = -0.264038
offset_top = -0.104034
offset_right = -0.35199
offset_bottom = -2.20001
theme = ExtResource("1_173kr")
text = "Scene will be played on start.
(Click to Close)"

[node name="Confirm" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.863
anchor_right = 0.701
anchor_bottom = 0.938
offset_left = 0.199951
offset_top = -0.223999
offset_right = 0.447937
offset_bottom = 0.175964
texture_normal = ExtResource("3_eac2a")

[connection signal="scene_select" from="." to="." method="_on_scene_select"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="button_up" from="Popup" to="." method="_on_popup_button_up"]
[connection signal="button_up" from="Confirm" to="." method="_on_confirm_button_up"]
